# Grafik

DIKUgrafik/: CMakeCache.txt  CMakeLists.txt  MakeLinks  Makefile  cmake_install.cmake
DIKUgrafik/Include/DIKUgrafik/: bezierpatch.h  beziersurface.h  camera.h  dinisurface.h  edge.h  errorcheck.h  glmutils.h  ifile.h  ifileopr.h  ifileopr.impl  ifileplain.h  kleinbottle.h  linerasterizer.h  ofile.h  ofileopr.h  ofileopr.impl  ofileplain.h  parametricsurface.h  phongsurface.h  readbezierpatches.h  shaderutils.h  traceinfo.h  triangle.h  windowutils.h
DIKUgrafik/Src/: CMakeLists.txt  Makefile  cmake_install.cmake
DIKUgrafik/Src/Assignment-1/: CMakeLists.txt  Makefile  assignment-1  assignment-1.cpp  cmake_install.cmake  linerasterizer.cpp  linerasterizer.h
DIKUgrafik/Src/Assignment-2/: CMakeLists.txt  Makefile  assignment-2  assignment-2.cpp  cmake_install.cmake  edge.cpp  edge.h  triangle.cpp  triangle.h
DIKUgrafik/Src/Assignment-3/: CMakeLists.txt  Makefile  assignment-3  assignment-3.cpp  cmake_install.cmake
DIKUgrafik/Src/Assignment-4/: CMakeLists.txt  Makefile  assignment-4  assignment-4.cpp  cmake_install.cmake  phong.frag  vertextransform.vert
DIKUgrafik/Src/Assignment-5/: CMakeLists.txt  Makefile  assignment-5  assignment-5.cpp  cmake_install.cmake
DIKUgrafik/Src/Assignment-6/: CMakeLists.txt  Makefile  assignment-6  assignment-6.cpp  cmake_install.cmake  dinisurface.cpp  dinisurface.h  kleinbottle.cpp  kleinbottle.h  parametricsurface.cpp  parametricsurface.h  phong.frag  phongsurface.cpp  phongsurface.h
DIKUgrafik/Src/BezierUtils/: CMakeLists.txt  Makefile  bezierpatch.cpp  bezierpatch.h  beziersurface.cpp  beziersurface.h  cmake_install.cmake  readbezierpatches.cpp
DIKUgrafik/Src/Camera/: CMakeLists.txt  Makefile  camera.cpp  camera.h  cmake_install.cmake  testcamera  testcamera.cpp
DIKUgrafik/Src/ErrorCheck/: Makefile  cmake_install.cmake  errorcheck.cpp  errorcheck.h
DIKUgrafik/Src/Files/: CMakeLists.txt  Makefile  cmake_install.cmake
DIKUgrafik/Src/Files/IFile/: CMakeLists.txt  Makefile  cmake_install.cmake  idatabad  idatashort  ifile.h  ifileopr.h  ifileopr.impl  ifileplain.cpp  ifileplain.h  testifile  testifile.cpp
DIKUgrafik/Src/Files/OFile/: CMakeLists.txt  Makefile  cmake_install.cmake  ofile.h  ofileopr.h  ofileopr.impl  ofileplain.cpp  ofileplain.h  testofile  testofile.cpp
DIKUgrafik/Src/ShaderUtils/: CMakeLists.txt  Makefile  cmake_install.cmake  shaderutils.cpp  shaderutils.h
DIKUgrafik/Src/TraceInfo/: CMakeLists.txt  Makefile  cmake_install.cmake  testtraceinfo  testtraceinfo.cpp  traceinfo.cpp  traceinfo.h
DIKUgrafik/Src/WindowUtils/: Makefile  cmake_install.cmake  windowutils.cpp  windowutils.h
DIKUgrafik/Src/glmutils/: CMakeLists.txt  Makefile  cmake_install.cmake  glmutils.cpp  glmutils.h  testglmutils  testglmutils.cpp  testglmutils2d  testglmutils2d.cpp  testglmutils3d  testglmutils3d.cpp
